Change html code

--- a/views/gallery_template.pug
+++ b/views/gallery_template.pug
@@ -3,38 +3,41 @@ html
 head
     title="gallery"
     style
-        include style_gallery.css
+        include public/style_gallery.css
 body
     div.gallery
-        a(target="_blank", href="/images/1 palac milkow.jpg") 
-            img(src="/images/1 palac milkow.jpg", alt="Pałac Miłków", width="600", height="400")/
-    div.desc Pałac Miłków
-    div.gallery
-        a(target="_blank", href="/images/2 palac wojanow.jpg")
-            img(src="/images/2 palac wojanow.jpg", alt="Pałac Wojanów", width="600", height="400")/
-    div.desc Pałac Wojanów
-    div.gallery
-        a(target="_blank", href="/images/3 palac lomnica.jpg")
-            img(src="/images/3 palac lomnica", alt="Pałac Łomnica", width="600", height="400")/
-    div.desc Pałac Łomnica
-    div.gallery
-        a(target="_blank", href="/images/4 palac bobrow.jpg")
-            img(src="/images/4 palac bobrow.jpg", alt="Pałac Bobrów", width="600", height="400")/
-    div.desc Pałac Bobrów
-    div.gallery
-        a(target="_blank", href="/images/5 palac pakoszow.jpg")
-            img(src="/images/5 palac pakoszow.jpg", alt="Pałac Pakoszów", width="600", height="400")/
-    div.desc Pałac Pakoszów
-    div.gallery
-        a(target="_blank", href="/images/6 palac plawniowice.jpg")
-            img(src="/images/6 palac plawniowice.jpg", alt="Pałac Pławniowice", width="600", height="400")/
-    div.desc Pałac Pławniowice
-    div.gallery
-        a(target="_blank", href="/images/7 palac kamieniec zabkowicki.jpg")
-            img(src="/images/7 palac kamieniec zabkowicki.jpg", alt="Pałac Kamieniec Ząbkowicki", width="600", height="400")/
-    div.desc Pałac Kamieniec Ząbkowicki
-    div.gallery
-        a(target="_blank", href="/images/8 palac kraskow.jpg")
-            img(src="/images/8 palac kraskow.jpg", alt="Pałac Krasków", width="600", height="400")/
-    div.desc Pałac Krasków
+        div.row
+            div.image
+                a(target="_blank", href="./public/images/1 palac milkow.jpg") 
+                img(src="./public/images/1 palac milkow.jpg", alt="Pałac Miłków", width="600", height="400")/
+                div.desc Pałac Miłków
+            div.image
+                a(target="_blank", href="./public/images/2 palac wojanow.jpg")
+                img(src="./public/images/2 palac wojanow.jpg", alt="Pałac Wojanów", width="600", height="400")/
+                div.desc Pałac Wojanów
+            div.image
+                a(target="_blank", href="./public/images/3 palac lomnica.jpg")
+                img(src="./public/images/3 palac lomnica", alt="Pałac Łomnica", width="600", height="400")/
+                div.desc Pałac Łomnica
+            div.image
+                a(target="_blank", href="./public/images/4 palac bobrow.jpg")
+                img(src="./public/images/4 palac bobrow.jpg", alt="Pałac Bobrów", width="600", height="400")/
+                div.desc Pałac Bobrów
+        div.row
+            div.image
+                a(target="_blank", href="./public/images/5 palac pakoszow.jpg")
+                img(src="./public/images/5 palac pakoszow.jpg", alt="Pałac Pakoszów", width="600", height="400")/
+                div.desc Pałac Pakoszów
+            div.image
+                a(target="_blank", href="./public/images/6 palac plawniowice.jpg")
+                img(src="./public/images/6 palac plawniowice.jpg", alt="Pałac Pławniowice", width="600", height="400")/
+                div.desc Pałac Pławniowice
+            div.image
+                a(target="_blank", href="./public/images/7 palac kamieniec zabkowicki.jpg")
+                img(src="./public/images/7 palac kamieniec zabkowicki.jpg", alt="Pałac Kamieniec Ząbkowicki", width="600", height="400")/
+                div.desc Pałac Kamieniec Ząbkowicki
+            div.image
+                a(target="_blank", href="./public/images/8 palac kraskow.jpg")
+                img(src="./public/images/8 palac kraskow.jpg", alt="Pałac Krasków", width="600", height="400")/
+                div.desc Pałac Krasków
 
