--- a/views/first-template.pug
+++ b/views/first-template.pug
@@ -3,7 +3,7 @@ html
     head
         title="strona logowania"
         style
-            include style.css
+            include public/style.css
     body
         div.form
             form(action='http://localhost:3000/first-template', method='GET')
@@ -12,4 +12,4 @@ html
                 input(type="text")/
                 p Your password
                 input(type="password")/
-                a(href="gallery_template.pug") SEND
+                a(href="gallery_template") SEND
